route admin protection for contributor info
